# BachelorAIProject

./: .gitignore  Changelog.md  Doku.md  Projekt.md  README.md  build.gradle.kts  cleanup.py  settings.gradle.kts
.github/: copilot-instructions.md
.github/skills/: Skill.md
build-apple/Headers/: module.modulemap
composeApp/: build.gradle.kts
composeApp/src/androidMain/: AndroidManifest.xml
composeApp/src/androidMain/assets/models/: README.md
composeApp/src/androidMain/kotlin/com/example/bachelor_ai_project/: MainActivity.kt
composeApp/src/androidMain/kotlin/com/example/bachelor_ai_project/core/config/: AppConfig.android.kt
composeApp/src/androidMain/kotlin/com/example/bachelor_ai_project/core/util/: AndroidNativeRuntimeVerifier.android.kt  AudioFilePicker.android.kt  FileExistenceChecker.android.kt  PlatformFileProvider.android.kt
composeApp/src/androidMain/res/values/: strings.xml
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/app/: App.kt  AppViewModel.kt  AppViewModelFactory.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/app/designsystem/: BaComponents.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/app/ui/: AutomationSettingsCard.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/core/common/: DomainEvent.kt  UseCase.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/core/config/: AppConfig.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/core/model/: CoreModels.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/core/network/: HttpClientProvider.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/core/result/: AppResult.kt
composeApp/src/commonMain/kotlin/com/example/bachelor_ai_project/core/util/: AudioFilePicker.kt  PlatformFileProvider.kt
composeApp/src/iosMain/kotlin/com/example/bachelor_ai_project/: MainViewController.kt  Platform.ios.kt
gradle/: libs.versions.toml
iosApp/Configuration/: Config.xcconfig  Secrets.xcconfig.template
iosApp/iosApp/: IOSAudioFilePickerBridge.swift  IOSLlamaBridge.swift  IOSWhisperBridge.swift  Info.plist  LibLlama.swift  iOSApp.swift
iosApp/iosApp.xcodeproj/: project.pbxproj
iosApp/llama.cpp/examples/llama.swiftui/llama.cpp.swift/: LibLlama.swift
iosApp/llama.cpp/ggml/src/ggml-metal/: ggml-metal-device.m
iosApp/llama.cpp/src/: llama-mmap.cpp
iosApp/whisper.cpp/build-apple/whisper.xcframework/: Info.plist
iosApp/whisper.cpp/build-apple/whisper.xcframework/ios-arm64_x86_64-simulator/Headers/: module.modulemap
llama.cpp/examples/llama.android/lib/: build.gradle.kts
llama.cpp/examples/llama.android/lib/src/main/cpp/: CMakeLists.txt  ai_chat.cpp  logging.h
scripts/: README.md  parse_llm_timings.py  push_android_models.sh  push_ios_models.sh  update_llama_cpp_android.sh
whisper.cpp/examples/whisper.android/lib/: build.gradle  build.gradle.kts
whisper.cpp/examples/whisper.android/lib/src/main/jni/whisper/: CMakeLists.txt  jni.c
whisper.cpp/ggml/src/ggml-metal/: ggml-metal-device.m
(+71 files in other folders)
